# workspace-docker

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .taplo.toml  CHANGELOG.md  Dockerfile.custom.template  Dockerfile.template  LICENSE  README.md  clean-docker.sh  clean-volumes.sh  docker-compose.custom.template  docker-compose.yml.template  generate-workspace.sh  pyproject.toml  rebuild-container.sh  setup-docker.sh  switch-env.sh  test.sh
.devcontainer/: devcontainer.json  devcontainer.json.template  docker-compose.yml  docker-compose.yml.template
.github/: copilot-instructions.md
.github/instructions/: changelog.instructions.md  shell.instructions.md  tests.instructions.md
.github/prompts/: improve.prompt.md
.github/workflows/: ci.yml
agent/: lessons.md
config/: .bashrc_custom.example  apt-base-packages.conf  workspace-settings.json  workspace-settings.json.example
docs/: CHANGELOG.ja.md  README.ja.md  reference.ja.md  reference.md  setup.ja.md  setup.md  usage.ja.md  usage.md
lib/: certificates.sh  colors.sh  devcontainer.sh  errors.sh  generators.py  generators.sh  i18n.sh  logging.sh  plugin.sh  plugins.sh  toml_parser.py  tui.sh  utils.sh  validators.sh  versions.conf  workspace.sh
locale/: en.sh  ja.sh
plugins/: aws-cli.toml  aws-sam-cli.toml  claude-code.toml  copilot-cli.toml  custom-ps1.toml  docker-cli.toml  github-cli.toml  go.toml  lazygit.toml  nerd-fonts.toml  proto.toml  rust.toml  starship.toml  uv.toml  zig.toml
schemas/: plugin.schema.json  workspace.schema.json
tests/: run_all.sh  run_coverage.sh  test_generate_workspace.sh  test_helper.sh  test_integration.sh  test_lib.sh  test_plugins.sh  test_project_structure.sh  test_rebuild_container.sh  test_setup_docker.sh  test_snapshot.sh  test_switch_env.sh
tests/e2e/: test_generate_workspace.sh
tests/fixtures/: snapshot.workspace.toml
tests/integration/: integration_helper.sh  test_clean_docker.sh  test_clean_volumes.sh  test_integration.sh  test_pipeline.sh  test_setup_docker.sh  (+1 more)
(+46 files in other folders)
