[project]
name = "workspace-docker"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["lib/*.py"]

[tool.ruff]
target-version = "py311"
src = ["lib"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "RUF001",  # ambiguous unicode — Japanese full-width parentheses are intentional
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
